--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Crafty+Girls&family=Fredericka+the+Great&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="reset.css">
    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="todo.css">
    <title>  Pomodoro Timer || ⏰ </title>
 </head>
 <body>
